fix alignment to top

--- a/occurrences-app/src/components/pages/Occurrence/MeasurementOrFact/MeasurementOrFact.scss
+++ b/occurrences-app/src/components/pages/Occurrence/MeasurementOrFact/MeasurementOrFact.scss
@@ -3,6 +3,8 @@
 
   .supplied {
     background-color: $background;
+    align-self: flex-start;
+    padding-bottom: 3rem;
   }
 
   .dropdown {
